--- a/htdocs/.htaccess
+++ b/htdocs/.htaccess
@@ -3,7 +3,7 @@ RewriteEngine On
 
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_FILENAME} !-s
-RewriteRule ^(.*)$ index.php?rquest=$1 [QSA,NC,L]
+RewriteRule ^(.*)$ index.php?request=$1 [QSA,NC,L]
 
 RewriteCond %{REQUEST_FILENAME} -d
 RewriteRule ^(.*)$ index.php [QSA,NC,L]
