--- a/htdocs/.htaccess
+++ b/htdocs/.htaccess
@@ -1,12 +1,10 @@
 RewriteBase /
 RewriteEngine On
 
-RewriteCond %{REQUEST_FILENAME} !-d
-RewriteCond %{REQUEST_FILENAME} !-s
-RewriteRule ^(.*)$ index.php?request=$1 [QSA,NC,L]
+RewriteCond %{REQUEST_FILENAME} -f
+RewriteRule ^ - [L]
 
 RewriteCond %{REQUEST_FILENAME} -d
-RewriteRule ^(.*)$ index.php [QSA,NC,L]
+RewriteRule ^ - [L]
 
-RewriteCond %{REQUEST_FILENAME} -s
-RewriteRule ^(.*)$ index.php [QSA,NC,L]
+RewriteRule ^(.*)$ index.php?request=$1 [QSA,NC,L]
