--- a/.env.sample
+++ b/.env.sample
@@ -4,3 +4,4 @@ DB_PASSWORD=your_database_password
 DB_NAME=your_database_name
 MIGRATIONS_PATH=/path/to/your/project/src/Database/migrations/
 MIGRATION_FLAG=/path/to/your/project/src/Database/.migrated
+BCRYPT_COST=give_a_cost_value_here
