Token gen access + refresh

--- a/.env.sample
+++ b/.env.sample
@@ -1,7 +1,16 @@
+# Database configuration
 DB_SERVER=your_database_server
 DB_USERNAME=your_database_username
 DB_PASSWORD=your_database_password
 DB_NAME=your_database_name
+
+# Migration configuration
 MIGRATIONS_PATH=/path/to/your/project/src/Database/migrations/
 MIGRATION_FLAG=/path/to/your/project/src/Database/.migrated
+
+# Bcrypt configuration
 BCRYPT_COST=give_a_cost_value_here
+
+# Token expiration times (in seconds)
+SESSION_TOKEN_EXPIRE=give_session_token_expiry_time_here
+REFRESH_TOKEN_EXPIRE=give_session_token_refresh_time_here
