mail send and verify and resend is tested and working

--- a/.env.sample
+++ b/.env.sample
@@ -1,8 +1,9 @@
 # Database configuration
-DB_SERVER=your_database_server
-DB_USERNAME=your_database_username
-DB_PASSWORD=your_database_password
-DB_NAME=your_database_name
+DB_SERVER=localhost
+DB_USERNAME=root
+DB_PASSWORD=your_password
+DB_NAME=api_database
+DB_CONNECT_TIMEOUT=5
 
 # Migration configuration
 MIGRATIONS_PATH=/path/to/your/project/src/Database/migrations/
@@ -14,3 +15,14 @@ BCRYPT_COST=give_a_cost_value_here
 # Token expiration times (in seconds)
 SESSION_TOKEN_EXPIRE=give_session_token_expiry_time_here
 REFRESH_TOKEN_EXPIRE=give_session_token_refresh_time_here
+
+# Email (Gmail SMTP)
+EMAIL=your-email@gmail.com
+EMAIL_PASSWORD=your_gmail_app_password
+EMAIL_FROM_NAME=YourAPI
+
+# App URL for email links
+APP_URL=https://yourdomain.com
+
+# Verification token expiry (in seconds) - 1 day = 86400
+VERIFICATION_TOKEN_EXPIRE=86400
