development server for mailing

--- a/.env.sample
+++ b/.env.sample
@@ -21,6 +21,9 @@ EMAIL=your-email@gmail.com
 EMAIL_PASSWORD=your_gmail_app_password
 EMAIL_FROM_NAME=YourAPI
 
+# Development mode (set to 'true' to skip email sending, logs to error_log instead)
+DEVELOPMENT_MODE=false
+
 # App URL for email links
 APP_URL=https://yourdomain.com
 
